[Spigot] Added dynmap flag.